started Code page, download button

--- a/code.html
+++ b/code.html
@@ -86,7 +86,7 @@
         </script>
 </head>
 
-<body class="baseline home">
+<body class="baseline">
 
     <div class="topbar"></div>
 
@@ -131,23 +131,22 @@
 	</figure>
 	
     <header>
-        <h1 class="masthead">The Web Professional's Primer</h1>         
-        <p class="kicker">The <b>Web Professional's Primer</b> is part field guide, part encyclopedia, and part toolkit: the beginnings of an ambitious project organizing the collective knowledge of the web community into a killer reference manual, educational hub and resource library. </p>
-
-         <div id="gridder" class="show">grid</div>
-         <div id="baseliner" class="show">baseline</div>
-         
         <nav>
              <ul>
-                 <li><a href="code.html">Code</a></li>
+                 <li><a href="index.html">Home</a></li>
                  <li><a href="#">Breakdown</a></li>
                  <li><a href="#">Basics</a></li>
                  <li><a href="#">Sources</a></li>                 
              </ul>
          </nav>         
+        <h1 class="masthead">WPP: The Code</h1>         
     </header>
 	
 	<section>
+	<figure class="dl">
+	    <a href="#">&#11015;</a>
+	</figure>
+	
 	<h1 class="delta">The Present</h1>
 	<p>One thing I definitely didn't expect working on this project was how its scope would expand. It started as a simple site meant to serve a downloadable template and offer some explanation for what was inside. At this point, I think the project is definitely reaching the level of complexity and involvement a project in a 400-level class should. I also didn't expect how much of this project would "iceberg" &mdash; that is, most of the work I did wasn't on the final site seen here, but in the research, writing, documentation and designing behind the scenes. </p>
 	
@@ -156,7 +155,7 @@
 	
 	<section>
 	<h1 class="delta">The Future</h1>
-    <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, syntax highlighting for all the code snippets, video tutorials to go alongside the writing, I want to improve and tweak the responsive design, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
+    <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, video tutorials to go alongside the writing, I want to improve and tweak the responsive design of the site itself, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
     
     <p>At the end of next semester, I hope to launch this project as a wholly-professional "product", out there in the wild to be used and improved upon. Towards this, I've already open-sourced the project, and I've already actually hosted this site on my <a href="http://github.com/zakkain">Github</a> account, which has a full record of commits showing how I built the site.</p>
 	</section>
