call to action, button finalized

--- a/code.html
+++ b/code.html
@@ -134,26 +134,26 @@
         <nav>
              <ul>
                  <li><a href="index.html">Home</a></li>
-                 <li><a href="#">Breakdown</a></li>
-                 <li><a href="#">Basics</a></li>
-                 <li><a href="#">Sources</a></li>                 
+                 <li><a href="code.html#breakdown">Breakdown</a></li>
+                 <li><a href="basics.html">Basics</a></li>
+                 <li><a href="sources.html">Sources</a></li>                 
              </ul>
          </nav>         
         <h1 class="masthead">WPP: The Code</h1>         
     </header>
 	
-	<section>
+	<section class="clearfix">
 	<figure class="dl">
 	    <a href="#">&#11015;</a>
 	</figure>
 	
-	<h1 class="delta">The Present</h1>
-	<p>One thing I definitely didn't expect working on this project was how its scope would expand. It started as a simple site meant to serve a downloadable template and offer some explanation for what was inside. At this point, I think the project is definitely reaching the level of complexity and involvement a project in a 400-level class should. I also didn't expect how much of this project would "iceberg" &mdash; that is, most of the work I did wasn't on the final site seen here, but in the research, writing, documentation and designing behind the scenes. </p>
+	<h1 class="delta">Download the Template!</h1>
+	<p class="epsilon tagline">Fully-commented, fully-sourced, chock full of goodies!</p>
 	
-	<p>Because of this, many of my goals stated at the midterm were not reached; however, I feel I made strong headway into what, hopefully, will become a very high-quality capstone project. Under the <a href="#">Breakdown</a> section of this site is a line-by-line walkthrough of my current HTML/CSS template &mdash; the result of truly an ungodly amount of research. I have listed as many of my sources as I could inline, and on the <a href="###">Sources</a> page. Lastly, the first few articles I have written are up in the <a href="#">Basics</a> page.</p>
+	<p>jibba jabba</p>
 	</section>		
 	
-	<section>
+	<section id="breakdown">
 	<h1 class="delta">The Future</h1>
     <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, video tutorials to go alongside the writing, I want to improve and tweak the responsive design of the site itself, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
     
