--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <nav>
              <ul>
                  <li><a href="code.html">Code</a></li>
-                 <li><a href="#">Breakdown</a></li>
-                 <li><a href="#">Basics</a></li>
-                 <li><a href="#">Sources</a></li>                 
+                 <li><a href="code.html#breakdown">Breakdown</a></li>
+                 <li><a href="basics.html">Basics</a></li>
+                 <li><a href="sources.html">Sources</a></li>                 
              </ul>
          </nav>         
     </header>
