--- a/code.html
+++ b/code.html
@@ -148,15 +148,18 @@
 	</figure>
 	
 	<h1 class="delta">Download the Primer Template!</h1>
-	<p class="epsilon tagline">Fully-commented, fully-sourced, chock full of goodies!</p>
+	<p class="epsilon">Fully-commented, fully-sourced, chock full of goodies!</p>
 	
-	<p>The <strong>Primer Template</strong> is the end result of very thorough research into the latest web technologies, best-practices, conventional wisdom and knowledge from throughout the web design &amp; development community. It is the template I start from when beginning a new project, and it gets updated as new techniques and conventions emerge. For the full documentation and analysis, see below. </p>
+	<p class="promo copy">The <strong>Primer Template</strong> is the end result of very thorough research into the latest web technologies, best-practices, conventional wisdom and knowledge from throughout the web design &amp; development community. It is the template I start from when beginning a new project, and it gets updated as new techniques and conventions emerge. For the full documentation and analysis, see below. </p>
 	</section>		
 	
 	<section id="breakdown">
 	<h1 class="gamma">Break it down now, y'all</h1>
-    <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, video tutorials to go alongside the writing, I want to improve and tweak the responsive design of the site itself, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
-    
+    <ol class="table-of-contents">
+        <li>index.html</li>
+        <li>styles.css</li>
+    </ol>
+     
     <p>At the end of next semester, I hope to launch this project as a wholly-professional "product", out there in the wild to be used and improved upon. Towards this, I've already open-sourced the project, and I've already actually hosted this site on my <a href="http://github.com/zakkain">Github</a> account, which has a full record of commits showing how I built the site.</p>
 	</section>
 	
