writing articles, cleaned up head, tweaked article layout

--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
     <!-- activate ClearType for smooth fonts on mobile IE: http://html5boilerplate.com/mobile -->
     <meta http-equiv="cleartype" content="on">
 
-    <!-- enable html5 elements in IE (don't need with modernizr) -->
-	<!--[if lt IE 9]><script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-    <!-- iOS web app, deletable if not needed -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <!-- Prevent links in standalone web apps opening Mobile Safari. https://gist.github.com/1042026 -->
-    <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
-        <!-- iOS startup images: http://miniapps.co.uk/blog/post/ios-startup-images-using-css-media-queries -->
-    <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and not (-webkit-min-device-pixel-ratio: 2)" href="img/startup-iphone.png"> <!-- 320x460 for iPhone 3GS -->
-    <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="img/startup-iphone4.png"> <!-- 640x920 for retina display -->
-    <link rel="apple-touch-startup-image" media="(min-device-width: 768px) and (orientation: portrait)" href="img/startup-iPad-portrait.png"> <!-- iPad Portrait 768x1004 -->
-    <link rel="apple-touch-startup-image" media="(min-device-width: 768px) and (orientation: landscape)" href="img/startup-iPad-landscape.png"> <!-- iPad Landscape 1024x748 -->
-
         <!-- favicon, 16px -->
 	<link rel="shortcut icon" href="favicon.ico">    
  
@@ -156,7 +142,7 @@
 	
 	<section>
 	<h1 class="delta">The Future</h1>
-    <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, syntax highlighting for all the code snippets, video tutorials to go alongside the writing, I want to improve and tweak the responsive design, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
+    <p>I have several goals in mind for next semester. First, of course, is expanding upon the articles I have written to include the topics I proposed in my midterm, and improving the writing style &amp; examples. Armed now with the research and sources, this can be done without having to do all the grunt work first. Second, from a front-facing site point of view, I have lots of features in mind that I want to try implementing: a javascript or php download customizer for the template, syntax highlighting for all the code snippets, video tutorials to go alongside the writing, I want to improve and tweak the responsive design, as well as clean up the code (which is pretty messy, as you no doubt can tell).</p>
     
     <p>At the end of next semester, I hope to launch this project as a wholly-professional "product", out there in the wild to be used and improved upon. Towards this, I've already open-sourced the project, and I've already actually hosted this site on my <a href="http://github.com/zakkain">Github</a> account, which has a full record of commits showing how I built the site.</p>
 	</section>
