wrote all index.html content, tweaked stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
     <title>Web Professional's Primer</title>
-    <meta name="description" content="">
+    <meta name="description" content="The Web Professional's Primer is part field guide, part encyclopedia, and part toolkit: the beginnings of an ambitious project organizing the collective knowledge of the web community into a killer reference manual, educational hub and resource library.">
     <meta name="author" content="Zachary Kain">
 
     <!-- mobile viewport optimization: http://html5boilerplate.com/mobile & http://t.co/dKP3o1e & http://learnthemobileweb.com/2009/07/mobile-meta-tags -->
