plugged in content, leaving CSS to later. Better to hand it in today and update as I go.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                  <li><a href="code.html">Code</a></li>
                  <li><a href="code.html#breakdown">Breakdown</a></li>
                  <li><a href="basics.html">Basics</a></li>
-                 <li><a href="sources.html">Sources</a></li>                 
+                 <li><a href="http://zacharykain.com/dart449/midterm">Midterm</a></li>                 
              </ul>
          </nav>         
     </header>
