added dl link to code page

--- a/code.html
+++ b/code.html
@@ -132,7 +132,7 @@
 	
 	<section class="clearfix">
     	<figure class="dl">
-    	    <a href="#">&#11015;</a>
+    	    <a href="https://github.com/zakkain/Web-Professional-Primer/zipball/master">&#11015;</a>
     	</figure>
     	
     	<h1 class="delta">Download the Primer Template!</h1>
