--- a/code.html
+++ b/code.html
@@ -136,7 +136,7 @@
     	</figure>
     	
     	<h1 class="delta">Download the Primer Template!</h1>
-    	<p class="epsilon">Fully-commented, fully-sourced, chock full of goodies!</p>
+    	<p class="epsilon">Fully-commented, fully-sourced, chock full of goodies! (and you can <a href="https://github.com/zakkain/Web-Professional-Primer">fork it on github</a>!)</p>
     	
     	<p class="promocopy">The <strong>Primer Template</strong> is the end result of very thorough research into the latest web technologies, best-practices, conventional wisdom and knowledge from throughout the web design &amp; development community. It is the template I start from when beginning a new project, and it gets updated as new techniques and conventions emerge. For the full documentation and analysis, see below. <i>Quick tip on a feature not yet fully implemented: clicking on a box of sample code will switch it from horizontal-scroll mode to word-wrap mode, so that's neat.</i></p>
 	</section>		
