--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- speed up grabbing jquery from google servers: http://html5boilerplate.com/docs/DNS-Prefetching -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
-    <title></title>
+    <title>Web Professional's Primer</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
