--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- speed up grabbing jquery from google servers: http://html5boilerplate.com/docs/DNS-Prefetching -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
-    <title>Web Professional's Primer</title>
+    <title><del>Web Professional's Primer</del> Web-Craft</title>
     <meta name="description" content="The Web Professional's Primer is part field guide, part encyclopedia, and part toolkit: the beginnings of an ambitious project organizing the collective knowledge of the web community into a killer reference manual, educational hub and resource library.">
     <meta name="author" content="Zachary Kain">
 
@@ -117,7 +117,7 @@
 	</figure>
 	
     <header>
-        <h1 class="masthead">The Web Professional's Primer</h1>         
+        <h1 class="masthead"><del>Web Professional's Primer</del> Web-Craft</h1>         
         <p class="kicker">The <b>Web Professional's Primer</b> is part field guide, part encyclopedia, and part toolkit: the beginnings of an ambitious project organizing the collective knowledge of the web community into a killer reference manual, educational hub and resource library. </p>
 
          <div id="gridder" class="show">grid</div>
