--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             </div>
             <div>
               <label class="hang-inside-left" for="search">Search</label>
-              <input id="search" type="search"/><input id="password" type="submit" class="search"/>
+              <input id="search" type="search"/><input id="password" type="submit" class="search" value="Search">
               <em>Note about this field</em>
             </div>
             <div>
