--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
     <!--  standard title and meta content tags -->
-    <title>Document Title</title>
+    <title>Markup &amp; Style Guide | Web-Craft Primer</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Zachary Kain">
 
     <!--  canonical url for google crawling: http://t.co/y1jPVnT
           http://html5boilerplate.com/html5boilerplate-site/built/en_US/docs/html-head/#canonical-url -->
