change page title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     
     <!--  standard title and meta content tags -->
-    <title>Markup &amp; Style Guide | Web-Craft Primer</title>
+    <title>Web-Craft Primer | Zachary Kain</title>
     <meta name="description" content="">
     <meta name="author" content="Zachary Kain">
 
