add page.title to templates

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -1,8 +1,10 @@
 ---
-layout: default
+layout: post
 title: Fundamentals
 description: "Learn the fundamentals of HTML and CSS."
 ---
+
+<h1 class="hN mega">{{ page.title }}</h1>
 
 <!-- content of this page is a loop showing some posts -->
 {% for post in site.categories.fundamentals %}
