--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Web Fundamentals"
-description: "Learn the fundamentals of HTML and CSS."
+title: Fundamentals
+description: "Learn the fundamentals of markup and style with two introductory lessons in HTML and CSS."
 ---
 
 <!-- content of this page is a loop showing some posts -->
 {% for post in site.categories.fundamentals %}
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-{{ post.content }}
+<!-- {{ post.content }} -->
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
