--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -1,11 +1,11 @@
 ---
-layout: post
+layout: default
 title: Fundamentals
 description: "Learn the fundamentals of markup and style with two introductory lessons in HTML and CSS."
 ---
 
 <!-- content of this page is a loop showing some posts -->
-{% for post in site.categories.fundamentals %}
+{% for post in site.categories.fundamentals limit:5 %}
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 {{ post.content }}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
