trying this shit again

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: Fundamentals
 description: "Learn the fundamentals of markup and style with two introductory lessons in HTML and CSS."
 ---
