--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -6,7 +6,7 @@ description: "Learn the fundamentals of markup and style with two introductory l
 
 <!-- content of this page is a loop showing some posts -->
 {% for post in site.categories.fundamentals limit:5 %}
-<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 {{ post.content }}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
