start webfont typography styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ description: "Web-Craft is an online curriculum written to help design students 
   <div id="grid">
 	
   <section class="styleguide">
+    <h1 class="hN tera">Elements &amp; Style</h1>
+    <p class="freight">Above is a <code>.tera</code> title element.</p>
+    <h1 class="hN giga">Elements &amp; Style</h1>
+    <p class="freight">Above is a <code>.giga</code> title element.</p>
+    <h1 class="hN mega">Elements &amp; Style</h1>
+    <p class="freight">Above is a <code>.mega</code> title element.</p>
+
     <h1 class="hN alpha">Elements &amp; Style</h1>
     <p class="freight">This document is a guide to the mark-up styles used throughout the site.</p>
   
