mega updates, site looks good, added social share buttons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 ---
 layout: default
 title: "Web-Craft: A Primer"
-description: "Web-Craft is an online curriculum written to help design students become fluent with the web. Through articles and lessons that explore the fundamentals, tools and techniques of modern web design, Web-Craft draws from the collective knowledge of the web community to curate a thorough reference manual, educational resource and invaluable resource library."
+description: "Web-Craft is a free online curriculum written to help design students become fluent with the web. Through articles and lessons that explore the fundamentals, tools and techniques of modern web design, Web-Craft draws from the collective knowledge of the web community to curate a thorough reference manual, educational resource and invaluable resource library."
 ---
 
 <!-- content of this page -->
   <div id="grid">
-	
-  <section class="styleguide">
+
+  {% include nav.html %}
+  
+  <section role="main" class="light-area">
+    <a href="#" class="gridder alpha txt-blue">☰</a>
     <h1 class="hN tera">Elements &amp; Style</h1>
     <p class="freight">Above is a <code>.tera</code> title element.</p>
     <h1 class="hN giga">Elements &amp; Style</h1>
