add blank layout file, fix styleguide issues

--- a/styleguide.html
+++ b/styleguide.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: blank
 title: "Markup &amp; Style | Web-Craft Primer"
 description: "This page is a living styleguide, exhibiting the Web-Craft Primer's default styles for each HTML element."
 ---
