--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -10,5 +10,5 @@ description: "Learn the fundamentals of markup and style with two introductory l
 
 {{ post.content | replace:'more start -->','' | replace:'&lt;!-- more end','' }}
 
-<em>Posted on {{ post.date | date_to_long_string }}.</em>
+<!-- <em>Posted on {{ post.date | date_to_long_string }}.</em> -->
 {% endfor %}
