push up to 1.8 of html documentation

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: documentation
 title: Fundamentals
 description: "Learn the fundamentals of markup and style with two introductory lessons in HTML and CSS."
 ---
