finished css documentation

--- a/styleguide.html
+++ b/styleguide.html
@@ -140,7 +140,7 @@ description: "This page is a living styleguide, exhibiting the Web-Craft Primer'
           </ul>
         </figure>
   
-      <h3 class="hN gamma">Definition list</h3>
+      <h3 class="hN gamma" id="definition-lists">Definition list</h3>
         <p class="freight">The <code>dl</code> element is for another type of list called a definition list. Instead of list items, the content of a <code>dl</code> consists of <code>dt</code> (Definition Term) and <code>dd</code> (Definition Description) pairs.</p>
         <p class="freight">Primer offers different styles for definition lists. In all three of the examples below, the contents of <code>dt</code>s are wrapped in <code>b</code> tags, and a class of <code>.micro</code> is given to the contents of <code>dd</code>s. First is the default format for definitions lists:</p>
         <figure class="example">
