rename posts for proper ordering, change empty copy in patterns & journal

--- a/journal/index.html
+++ b/journal/index.html
@@ -4,7 +4,8 @@ title: Journal
 description: "Articles &amp; Essays on the advanced practice and theory of web design and development."
 ---
 
-<!-- content of this page is a loop showing some posts -->
+There will be entries appearing soon!
+
 {% for post in site.categories.journal limit:5 %}
 <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 
