--- a/patterns/index.html
+++ b/patterns/index.html
@@ -4,7 +4,9 @@ title: "Pattern Library"
 description: "The Web-Craft pattern library is an invaluable resource, a knowledge base with a remarkable signal-to-noise ratio. Each design pattern and snippet is well-documented with sample usage."
 ---
 
-<h1 class="hN alpha">Patterns</h1>
+There will be entries appearing soon!
+
+<h1 class="hN beta">Patterns</h1>
 {% for post in site.categories.patterns limit:5 %}
 <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 
@@ -14,7 +16,7 @@ description: "The Web-Craft pattern library is an invaluable resource, a knowled
 {% endfor %}
 
 
-<h1 class="hN alpha">Snippets</h1>
+<h1 class="hN beta">Snippets</h1>
 {% for post in site.categories.snippets limit:5 %}
 <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 
